Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,8 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero quasi deleniti mollitia molestiae, sit id ratione fugiat, totam unde corporis accusamus officiis tenetur, sequi ab maiores sunt soluta inventore suscipit.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aut accusantium labore facere officia sunt perferendis quam iste commodi, velit soluta quisquam nostrum adipisci itaque cumque vitae? Enim, beatae fuga!</p>
     
 </body>
 </html>
